Soundboard Fixed ALignment and Colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 html {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 100%;
-    background: #333;
+    background: #2D3047;
 }
 
 #box {
@@ -53,7 +53,15 @@ img {
 .header,
 .footer {
     width: 100%;
+    height: 10vh;
+    margin-bottom: 2vh;
+    background-color: #FFFD82;
+    border: none;
+    color: #2D3047;
     text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 6vh;
 }
 
 a {
@@ -62,12 +70,13 @@ a {
 }
 
 .buttons {
-    background-color: #1097e5;
+    vertical-align:top;
+    background-color: #FFFD82;
     margin: 2vh;
     height: 15vh;
     width: 15vh;
     border: none;
-    color: white;
+     color: #2D3047;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -84,13 +93,8 @@ a {
 }
 
 @keyframes mymove {
-  from {background-color: aqua}
-  to {background-color: red}
-}
-
-@keyframes mymovew {
-  from {background-color: aqua}
-  to {background-color: red}
+  from {background-color: #1B998B}
+  to {background-color: #FFFD82}
 }
 
 
